# sample-load-test

./: locustfile.py  pyproject.toml
